--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- PAGE TITLE -->
-	<title>Tasif's Portfolio</title>
+	<title>Tasif Hossan</title>
 	<!-- FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet">
 	<!-- FONT AWESOME CSS -->
@@ -523,4 +523,5 @@
 <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
 <script src="js/script.js"></script>
 </body>
+
 </html>
